--- a/eb-btb-flask/requirements.txt
+++ b/eb-btb-flask/requirements.txt
@@ -8,3 +8,7 @@ Jinja2==2.10
 MarkupSafe==1.1.1
 Werkzeug==0.15.1
 PyMySql==0.7.2
+matplotlib==2.2.4
+numpy==1.16.3
+pandas==0.24.1
+scikit-learn==0.20.2
