--- a/eb-btb-flask/requirements.txt
+++ b/eb-btb-flask/requirements.txt
@@ -1,19 +1,22 @@
 Click==7.0
 cycler==0.10.0
 Flask==1.0.2
-flask-mysql==1.4.0
-flask_wtf==0.14
-wtforms==2.2.1
+Flask-MySQL==1.4.0
+Flask-WTF==0.14
 itsdangerous==1.1.0
 Jinja2==2.10
 kiwisolver==1.1.0
 MarkupSafe==1.1.1
 matplotlib==3.0.3
-pkg-resources==0.0.0
+numpy==1.16.3
+pandas==0.24.2
 PyMySQL==0.7.2
 pyparsing==2.4.0
 python-dateutil==2.8.0
 pytz==2019.1
+scikit-learn==0.20.3
+scipy==1.2.1
 six==1.12.0
+sklearn==0.0
 Werkzeug==0.15.1
-scikit-learn==0.20.2
+WTForms==2.2.1
